k8s/deployment-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: buzz
  labels:
    app: buzz
    component: backend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: buzz
      component: backend
  template:
    metadata:
      labels:
        app: buzz
        component: backend
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: backend
          image: mts.dgnr.us:5000/astral/buzz:backend
          resources:
            limits:
              cpu: "1"
              memory: 512Mi
            requests:
              cpu: 250m
              memory: 256Mi
