k8s/service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: buzz
  labels:
    app: buzz
    component: app
spec:
  selector:
    app: buzz
    component: app
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  type: ClusterIP
