k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  namespace: buzz
  annotations:
    traefik.ingress.kubernetes.io/response-buffering: "false"
    traefik.ingress.kubernetes.io/read-timeout: "200"
    traefik.ingress.kubernetes.io/router.middlewares: buzz-sse-optimizer@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: m.dgnr.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 3000
    - host: buzz.sudloh.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 3000
